--- a/Poker Layout/Base.lproj/Main.storyboard
+++ b/Poker Layout/Base.lproj/Main.storyboard
@@ -422,6 +422,6 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="3ce-c0-O0E"/>
-        <segue reference="5Fa-gQ-nuc"/>
+        <segue reference="ziY-YE-6FI"/>
     </inferredMetricsTieBreakers>
 </document>
