--- a/Poker Layout/Base.lproj/LaunchScreen.storyboard
+++ b/Poker Layout/Base.lproj/LaunchScreen.storyboard
@@ -18,17 +18,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="home.png" translatesAutoresizingMaskIntoConstraints="NO" id="LcL-e3-avO">
-                                <rect key="frame" x="0.0" y="46" width="414" height="850"/>
-                                <color key="backgroundColor" red="0.64050426800000004" green="0.64684589439999995" blue="0.64684589439999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="home.png" translatesAutoresizingMaskIntoConstraints="NO" id="5bT-bs-b5q">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.64050426800000004" green="0.64684589439999995" blue="0.64684589439999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="bottom" secondItem="LcL-e3-avO" secondAttribute="bottom" id="V4n-1p-BW5"/>
-                            <constraint firstAttribute="trailing" secondItem="LcL-e3-avO" secondAttribute="trailing" id="V5N-Hf-5rh"/>
-                            <constraint firstItem="LcL-e3-avO" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" constant="46" id="aiG-U5-myz"/>
-                            <constraint firstItem="LcL-e3-avO" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="wB7-nX-pvc"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="5bT-bs-b5q" secondAttribute="bottom" id="Q3A-qJ-O8x"/>
+                            <constraint firstItem="5bT-bs-b5q" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="cRg-b8-mfk"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="5bT-bs-b5q" secondAttribute="trailing" id="kBz-gn-Zzb"/>
+                            <constraint firstItem="5bT-bs-b5q" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="nYG-jZ-pnH"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -39,6 +38,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="home.png" width="612" height="792"/>
+        <image name="home.png" width="611.92352294921875" height="791.9010009765625"/>
     </resources>
 </document>
