--- a/Poker Layout/Base.lproj/Main.storyboard
+++ b/Poker Layout/Base.lproj/Main.storyboard
@@ -46,7 +46,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2fV-lR-Cwj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2336" y="-682"/>
+            <point key="canvasLocation" x="2238" y="-1340"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="vJ7-Bh-AZo">
@@ -216,7 +216,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zxt-xC-EXK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1056.5217391304348" y="134.5108695652174"/>
+            <point key="canvasLocation" x="1431" y="127"/>
         </scene>
         <!--Name Players-->
         <scene sceneID="tFl-DL-98u">
@@ -338,7 +338,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZZC-PB-GEb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1980" y="137"/>
+            <point key="canvasLocation" x="2438" y="275"/>
         </scene>
         <!--Table Layout-->
         <scene sceneID="oyk-5R-G52">
@@ -396,7 +396,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1OG-hZ-AIG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1980" y="898.94366197183103"/>
+            <point key="canvasLocation" x="3502" y="188"/>
         </scene>
     </scenes>
     <resources>
@@ -404,6 +404,6 @@
         <image name="home" width="408" height="528"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="tck-k1-E3H"/>
+        <segue reference="lcl-Sg-F6m"/>
     </inferredMetricsTieBreakers>
 </document>
