--- a/Poker Layout/Base.lproj/Main.storyboard
+++ b/Poker Layout/Base.lproj/Main.storyboard
@@ -396,7 +396,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1OG-hZ-AIG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3502" y="188"/>
+            <point key="canvasLocation" x="3602" y="299"/>
         </scene>
     </scenes>
     <resources>
@@ -404,6 +404,6 @@
         <image name="home" width="408" height="528"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="lcl-Sg-F6m"/>
+        <segue reference="tck-k1-E3H"/>
     </inferredMetricsTieBreakers>
 </document>
