--- a/Poker Layout/Base.lproj/Main.storyboard
+++ b/Poker Layout/Base.lproj/Main.storyboard
@@ -27,7 +27,7 @@
                                     <color key="titleColor" red="0.12549019610000001" green="0.16862745100000001" blue="0.20392156859999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
-                                    <segue destination="pjp-WU-YFO" kind="show" id="lcl-Sg-F6m"/>
+                                    <segue destination="pjp-WU-YFO" kind="showDetail" id="lcl-Sg-F6m"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -51,10 +51,11 @@
         <!--Navigation Controller-->
         <scene sceneID="vJ7-Bh-AZo">
             <objects>
-                <navigationController navigationBarHidden="YES" id="O5j-zp-0EP" sceneMemberID="viewController">
+                <navigationController id="O5j-zp-0EP" sceneMemberID="viewController">
                     <nil key="simulatedTopBarMetrics"/>
                     <nil key="simulatedBottomBarMetrics"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="ycH-vA-nQ7">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="yQk-gR-RTq">
@@ -94,11 +95,12 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <connections>
-                                    <segue destination="sIg-lS-301" kind="show" id="Pvk-pO-52X"/>
+                                    <segue destination="sIg-lS-301" kind="showDetail" id="Pvk-pO-52X"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cDW-wq-VX1">
                                 <rect key="frame" x="20" y="452" width="335" height="40"/>
+                                <color key="backgroundColor" red="0.64050426800000004" green="0.64684589439999995" blue="0.64684589439999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" name="DINAlternate-Bold" family="DIN Alternate" pointSize="24"/>
                                 <state key="normal" title="Start">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -305,7 +307,7 @@
                                 </state>
                                 <connections>
                                     <action selector="nextButton:" destination="f9Y-R9-hjT" eventType="touchUpInside" id="Kfe-or-dAJ"/>
-                                    <segue destination="yTB-ux-bT0" kind="presentation" identifier="toLayout" id="mSB-AT-HPq"/>
+                                    <segue destination="yTB-ux-bT0" kind="presentation" identifier="toLayout" id="7Sv-Je-t9Z"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -356,7 +358,7 @@
                                 </state>
                                 <connections>
                                     <action selector="returnHome:" destination="yTB-ux-bT0" eventType="touchUpInside" id="pii-06-Hk7"/>
-                                    <segue destination="pjp-WU-YFO" kind="show" id="tck-k1-E3H"/>
+                                    <segue destination="pjp-WU-YFO" kind="show" id="DPH-51-QrK"/>
                                 </connections>
                             </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="Seat 1:" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="yET-zj-ZeX">
@@ -404,6 +406,7 @@
         <image name="home" width="408" height="528"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="tck-k1-E3H"/>
+        <segue reference="7Sv-Je-t9Z"/>
+        <segue reference="DPH-51-QrK"/>
     </inferredMetricsTieBreakers>
 </document>
